# espui

./: .gitignore  data.json  data.yaml  main.py  match.yaml  pyproject.toml
client/: nuxt.config.ts
client/components/: app-bar.vue  cancel-btn.vue  form-buttons.vue  match-delete-dialog.vue  match-edit-dialog.vue  match-form.vue  match-item.vue  match-list.vue  match-overlay.vue  submit-btn.vue
client/layouts/: centered.vue  default.vue
client/pages/: index.vue
client/plugins/: vuetify.ts
src/: app.py  config.py  controllers.py  dependencies.py  encoders.py  exceptions.py  models.py  repo.py
src/services/: __init__.py  base.py  espanso.py  match.py
tests/: conftest.py  test_services.py
