[tool.poetry]
name = "espui"
version = "0.1.0"
description = ""
authors = ["Yakov-Varnaev <yakov.varnaev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.1"
pytest = "^8.2.2"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
gunicorn = "^22.0.0"
pyyaml = "^6.0.1"
black = "^24.4.2"
axblack = "^20220330"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
